--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -13,7 +13,7 @@
     email_sender: "noreply@yourcompany.com"
     email_password: "your_email_password"
 
-  tasks:
+tasks:
     - name: Get pending requests from ServiceNow
       uri:
         url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}?sysparm_query=state=pending"
@@ -32,7 +32,8 @@
       loop: "{{ pending_requests.json.result }}"
       loop_control:
         loop_var: request
-      tasks:
+      when: request.license_type is defined
+      block:
         - name: Approve and assign license if available
           when: request.license_type in available_licenses
           block:
