--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -6,24 +6,21 @@
     servicenow_instance: "https://dev247928.service-now.com/"
     servicenow_username: "admin"
     servicenow_password: "%ml4Vs9RXE/s"
-    servicenow_table: "sc_request_list"
-    azure_subscription_id: "your_subscription_id"
-    smtp_server: "smtp.yourdomain.com"
-    smtp_port: 587
-    email_sender: "noreply@yourcompany.com"
-    email_password: "your_email_password"
+    servicenow_table: "sc_request"
  
   tasks:
     - name: Get pending requests from ServiceNow
-      uri:
-        url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}?sysparm_query=state=pending"
+      ansible.builtin.uri:
+        url: "{{ servicenow_instance }}/api/now/table/{servicenow_table}"
         method: GET
         user: "{{ servicenow_username }}"
         password: "{{ servicenow_password }}"
         force_basic_auth: yes
+        headers:
+          Content-Type: "application/json"
         return_content: yes
       register: pending_requests
-
+      
     - name: Display pending requests
       debug:
         var: pending_requests.json.result
