--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -19,11 +19,14 @@
         return_content: yes
       register: servicenow_response
 
-    - name: Extract necessary details from requests
-      set_fact:
-        requests_list: "{{ servicenow_response.json.result | map(attribute='sys_id') | list }}"
-
-    - name: Display extracted request information
+    - name: Display request details
       debug:
-        msg: "Processing request ID: {{ item }}"
-      loop: "{{ requests_list }}"
+        msg: |
+          {% for request in servicenow_response.json.result %}
+          Request Number: {{ request.get('number', 'N/A') }}
+          User ID (Requested For): {{ request.get('requested_for', {}).get('value', 'Unknown') }}
+          User ID (Opened By): {{ request.get('opened_by', {}).get('value', 'Unknown') }}
+          Requested License Type: {{ request.get('short_description', 'Not Provided') }}
+          Description: {{ request.get('description', 'Not Provided') }}
+          ------------------------------------------------
+          {% endfor %}
