--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -1,5 +1,5 @@
 ---
-- name: License Assignment Workflow
+- name: Fetch Pending ServiceNow Requests
   hosts: localhost
   gather_facts: no
   vars:
@@ -11,7 +11,7 @@
     client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
     client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
-
+    
   tasks:
     - name: Fetch pending requests from ServiceNow
       uri:
@@ -34,7 +34,7 @@
           Description: {{ request.get('description', 'Not Provided') }}
           ------------------------------------------------
           {% endfor %}
-
+          
     - name: Get Azure access token
       uri:
         url: "https://login.microsoftonline.com/{{ tenant_id }}/oauth2/v2.0/token"
@@ -51,35 +51,17 @@
     - name: Set Azure token
       set_fact:
         access_token: "{{ azure_auth_response.json.access_token }}"
-
+    
     - name: Check License Availability in Azure
       uri:
-        url: "{{ graph_api_endpoint }}/subscriptions/licenses"
+        url: "{{ graph_api_endpoint }}/subscribedSkus"
         method: GET
         headers:
           Authorization: "Bearer {{ access_token }}"
           Content-Type: "application/json"
         return_content: yes
       register: azure_license_response
-
-    - name: Add dummy license data for testing
-      set_fact:
-        azure_license_response:
-          json:
-            value:
-              - id: "dummy-license-1"
-                skuPartNumber: "TEST_LICENSE_1"
-                prepaidUnits:
-                  enabled: 5
-                consumedUnits: 3
-              - id: "dummy-license-2"
-                skuPartNumber: "TEST_LICENSE_2"
-                prepaidUnits:
-                  enabled: 10
-                consumedUnits: 7
-
+    
     - name: Display license availability
       debug:
-        msg: "Available Licenses: {{ azure_license_response.json }}"
-
-    
+        msg: "Available Licenses: {{ azure_license_response.json }}"      
