--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -88,4 +88,46 @@
                 
     - name: Display license availability
       debug:
-        msg: "Available Licenses: {{ azure_license_response.json }}"      
+        msg: "Available Licenses: {{ azure_license_response.json }}"
+
+    - name: Process License Approval
+      block:
+        - name: Check License Availability
+          set_fact:
+            approval_status_map: >-
+              {%- set status_map = {} -%}
+              {%- for request_number, license_type in requested_license_map.items() -%}
+                {%- set clean_license_type = license_type | lower | regex_replace(' requested', '') -%}
+                {%- set found = false -%}
+                {%- for license in azure_license_response.json.value -%}
+                  {%- if license.skuPartNumber | lower == clean_license_type -%}
+                    {%- set _ = status_map.update({request_number: 'approved'}) -%}
+                    {%- set found = true -%}
+                  {%- endif -%}
+                {%- endfor -%}
+                {%- if not found -%}
+                  {%- set _ = status_map.update({request_number: 'rejected'}) -%}
+                {%- endif -%}
+              {%- endfor -%}
+              {{ status_map }}
+       
+    - name: Update Approval Status in ServiceNow
+          uri:
+            url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}/{{ item.key }}"
+            method: PATCH
+            user: "{{ servicenow_username }}"
+            password: "{{ servicenow_password }}"
+            force_basic_auth: yes
+            headers:
+              Content-Type: "application/json"
+            body_format: json
+            body:
+              approval: "{{ item.value }}"
+            return_content: yes
+          loop: "{{ approval_status_map | dict2items }}"
+          when: approval_status_map is not none
+
+        - name: Display Approval Results
+          debug:
+            msg: 
+              - "Approval Status Updated: {{ approval_status_map }}"          
