--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -110,5 +110,24 @@
                 {%- endif -%}
               {%- endfor -%}
               {{ status_map }}
-       
-  
+
+        - name: Update Approval Status in ServiceNow
+          uri:
+            url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}/{{ item.key }}"
+            method: PATCH
+            user: "{{ servicenow_username }}"
+            password: "{{ servicenow_password }}"
+            force_basic_auth: yes
+            headers:
+              Content-Type: "application/json"
+            body_format: json
+            body:
+              approval: "{{ item.value }}"
+            return_content: yes
+          loop: "{{ approval_status_map | dict2items }}"
+          when: approval_status_map is not none
+
+        - name: Display Approval Results
+          debug:
+            msg: 
+              - "Approval Status Updated: {{ approval_status_map }}"
