--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -32,9 +32,17 @@
           {%- endfor -%}
           {{ mapping }}
 
-    - name: Debug sys_id before update
+    - name: Display request details
       debug:
-        msg: "Mapping of sys_id to license request: {{ requested_license_map }}"
+        msg: |
+          {% for request in servicenow_response.json.result %}
+          Request sys_id: {{ request.get('sys_id', 'N/A') }}
+          User ID (Requested For): {{ request.get('requested_for', {}).get('value', 'Unknown') }}
+          User ID (Opened By): {{ request.get('opened_by', {}).get('value', 'Unknown') }}
+          Requested License Type: {{ request.get('short_description', 'Not Provided') }}
+          Description: {{ request.get('description', 'Not Provided') }}
+          ------------------------------------------------
+          {% endfor %}
 
     - name: Get Azure access token
       uri:
@@ -63,7 +71,7 @@
         return_content: yes
       register: azure_license_response
 
-    - name: Add dummy license data for testing (remove this after you have real data)
+    - name: Add dummy license data for testing (remove this after real data is available)
       set_fact:
         azure_license_response:
           json:
@@ -81,7 +89,7 @@
 
     - name: Display license availability
       debug:
-        msg: "Available Licenses: {{ azure_license_response.json.value }}"
+        msg: "Available Licenses: {{ azure_license_response.json }}"
 
     - name: Process License Approval
       block:
