--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -5,11 +5,11 @@
   vars:
     servicenow_instance: "https://dev247928.service-now.com"
     servicenow_username: "admin"
-    servicenow_password: "password"
+    servicenow_password: "%ml4Vs9RXE/s"
     servicenow_table: "sc_request"
-    tenant_id: "tenant-id"
-    client_id: "client-id"
-    client_secret: "client-secret"
+    tenant_id: "195e8969-c853-47b4-83d0-36e044d83923"
+    client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
+    client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
 
   tasks:
