--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -11,7 +11,7 @@
     client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
     client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
-
+    
   tasks:
     - name: Fetch pending requests from ServiceNow
       uri:
@@ -33,7 +33,16 @@
 
     - name: Display request details
       debug:
-        msg: "{{ requested_license_map }}"
+        msg: |
+          {% for request in servicenow_response.json.result %}
+          Request Number: {{ request.get('number', 'N/A') }}
+          Sys ID: {{ request.get('sys_id', 'N/A') }}
+          User ID (Requested For): {{ request.get('requested_for', {}).get('value', 'Unknown') }}
+          User ID (Opened By): {{ request.get('opened_by', {}).get('value', 'Unknown') }}
+          Requested License Type: {{ request.get('short_description', 'Not Provided') }}
+          Description: {{ request.get('description', 'Not Provided') }}
+          ------------------------------------------------
+          {% endfor %}
 
     - name: Get Azure access token
       uri:
@@ -52,19 +61,35 @@
       set_fact:
         access_token: "{{ azure_auth_response.json.access_token }}"
 
-    - name: Manually Set License Data for Testing
+    - name: Check License Availability in Azure
+      uri:
+        url: "{{ graph_api_endpoint }}/subscribedSkus"
+        method: GET
+        headers:
+          Authorization: "Bearer {{ access_token }}"
+          Content-Type: "application/json"
+        return_content: yes
+      register: azure_license_response
+
+    - name: Add dummy license data for testing (remove this after u have real lic)
       set_fact:
         azure_license_response:
           json:
             value:
-              - skuPartNumber: "dummy-license-1"
+              - id: "dummy-license-1"
+                skuPartNumber: "TEST_LICENSE_1"
+                prepaidUnits:
+                  enabled: 5
+                consumedUnits: 3
+              - id: "dummy-license-2"
+                skuPartNumber: "TEST_LICENSE_2"
                 prepaidUnits:
                   enabled: 10
                 consumedUnits: 7
 
-    - name: Debug available Azure licenses
+    - name: Display license availability
       debug:
-        msg: "{{ azure_license_response.json.value }}"
+        msg: "Available Licenses: {{ azure_license_response.json }}"
 
     - name: Process License Approval
       block:
@@ -72,32 +97,26 @@
           set_fact:
             approval_status_map: >-
               {%- set status_map = {} -%}
-              {%- for sys_id, license_type in requested_license_map.items() -%}
+              {%- for request in servicenow_response.json.result -%}
+                {%- set request_sys_id = request.sys_id -%}
+                {%- set license_type = request.short_description -%}
                 {%- set clean_license_type = license_type | lower | regex_replace(' requested', '') -%}
                 {%- set found = false -%}
                 {%- for license in azure_license_response.json.value -%}
-                  {%- if license.skuPartNumber | lower == clean_license_type and license.prepaidUnits.enabled > license.consumedUnits -%}
-                    {%- set _ = status_map.update({sys_id: {'approval': 'approved', 'sys_id': sys_id }}) -%}
+                  {%- if license.skuPartNumber | lower == clean_license_type -%}
+                    {%- set _ = status_map.update({request_sys_id: 'approved'}) -%}
                     {%- set found = true -%}
                   {%- endif -%}
                 {%- endfor -%}
                 {%- if not found -%}
-                  {%- set _ = status_map.update({sys_id: {'approval': 'rejected', 'sys_id': sys_id }}) -%}
+                  {%- set _ = status_map.update({request_sys_id: 'rejected'}) -%}
                 {%- endif -%}
               {%- endfor -%}
               {{ status_map }}
 
-        - name: Debug License Matching
-          debug:
-            msg: "Checking Requested License: {{ clean_license_type }} against Azure License: {{ license.skuPartNumber }} (Enabled: {{ license.prepaidUnits.enabled }}, Consumed: {{ license.consumedUnits }})"
-
-        - name: Debug approval status mapping
-          debug:
-            msg: "Approval Status Map: {{ approval_status_map }}"
-
         - name: Update Approval Status in ServiceNow
           uri:
-            url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}/{{ item.value.sys_id }}"
+            url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}/{{ item.key }}"
             method: PATCH
             user: "{{ servicenow_username }}"
             password: "{{ servicenow_password }}"
@@ -106,7 +125,7 @@
               Content-Type: "application/json"
             body_format: json
             body:
-              approval: "{{ item.value.approval }}"
+              approval: "{{ item.value }}"
             return_content: yes
           loop: "{{ approval_status_map | dict2items }}"
           when: approval_status_map is not none
